--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "cloudinary": "~2.5.1",
     "dotenv": "~16.4.5",
     "express": "~4.21.1",
     "pg": "~8.13.1",
