--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "~16.4.5",
     "express": "~4.21.1",
     "joi": "~17.13.3",
-    "pg": "~8.13.1"
+    "pg": "~8.13.1",
+    "ts-node": "~10.9.2"
   },
   "devDependencies": {
     "@sequelize/core": "~7.0.0-alpha.43",
@@ -24,7 +25,6 @@
     "@types/express": "~5.0.0",
     "joi-to-typescript": "~4.14.0",
     "sequelize-cli": "~6.6.2",
-    "ts-node": "~10.9.2",
     "typescript": "~5.7.2"
   }
 }
