--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "backend-host-ape",
   "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": "20.14.0"
+  },
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "sequelize": "sequelize-cli",
     "db:migrate": "sequelize db:migrate",
     "db:init": "npx sequelize-cli init"
@@ -24,6 +30,7 @@
     "@sequelize/postgres": "~7.0.0-alpha.43",
     "@types/express": "~5.0.0",
     "joi-to-typescript": "~4.14.0",
+    "nodemon": "~3.1.7",
     "sequelize-cli": "~6.6.2",
     "typescript": "~5.7.2"
   }
