--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "express": "~4.21.1",
     "joi": "~17.13.3",
     "pg": "~8.13.1",
-    "ts-node": "~10.9.2"
+    "ts-node": "~10.9.2",
+    "@sequelize/core": "~7.0.0-alpha.43",
+    "@sequelize/postgres": "~7.0.0-alpha.43"
   },
   "devDependencies": {
-    "@sequelize/core": "~7.0.0-alpha.43",
-    "@sequelize/postgres": "~7.0.0-alpha.43",
     "@types/express": "~5.0.0",
     "joi-to-typescript": "~4.14.0",
     "nodemon": "~3.1.7",
