--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@sequelize/core": "~7.0.0-alpha.43",
+    "@sequelize/postgres": "~7.0.0-alpha.43",
     "cloudinary": "~2.5.1",
     "dotenv": "~16.4.5",
     "express": "~4.21.1",
     "joi": "~17.13.3",
+    "jsonwebtoken": "~9.0.2",
     "pg": "~8.13.1",
-    "ts-node": "~10.9.2",
-    "@sequelize/core": "~7.0.0-alpha.43",
-    "@sequelize/postgres": "~7.0.0-alpha.43"
+    "ts-node": "~10.9.2"
   },
   "devDependencies": {
     "@types/express": "~5.0.0",
+    "@types/jsonwebtoken": "~9.0.7",
     "joi-to-typescript": "~4.14.0",
     "nodemon": "~3.1.7",
     "sequelize-cli": "~6.6.2",
