add simple readme

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.14.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run migrate",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "sequelize": "sequelize-cli",
