--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "express": "~4.21.1",
     "joi": "~17.13.3",
     "jsonwebtoken": "~9.0.2",
+    "multer": "~1.4.5-lts.1",
     "pg": "~8.13.1",
+    "streamifier": "~0.1.1",
     "ts-node": "~10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "~5.0.2",
     "@types/express": "~5.0.0",
     "@types/jsonwebtoken": "~9.0.7",
+    "@types/multer": "~1.4.12",
+    "@types/streamifier": "~0.1.2",
     "joi-to-typescript": "~4.14.0",
     "nodemon": "~3.1.7",
     "sequelize-cli": "~6.6.2",
