--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sequelize/postgres": "~7.0.0-alpha.43",
     "bcrypt": "~5.1.1",
     "cloudinary": "~2.5.1",
+    "cors": "~2.8.5",
     "dotenv": "~16.4.5",
     "express": "~4.21.1",
     "joi": "~17.13.3",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "~5.0.2",
+    "@types/cors": "~2.8.17",
     "@types/express": "~5.0.0",
     "@types/jsonwebtoken": "~9.0.7",
     "@types/multer": "~1.4.12",
