--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "backend-host-ape",
   "version": "0.1.0",
   "main": "index.js",
-  "type": "module",
   "engines": {
     "node": "20.14.0"
   },
@@ -30,6 +29,7 @@
     "jsonwebtoken": "~9.0.2",
     "multer": "~1.4.5-lts.1",
     "pg": "~8.13.1",
+    "sequelize": "^6.37.7",
     "streamifier": "~0.1.1",
     "ts-node": "~10.9.2"
   },
