--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc && npm run migrate",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev:watch": "nodemon src/server.ts",
+    "dev": "npm run build -- npm run start",
     "sequelize": "sequelize-cli",
     "db:migrate": "sequelize db:migrate",
     "db:init": "npx sequelize-cli init",
