--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && npm run migrate",
     "start": "node dist/server.js",
     "dev:watch": "nodemon src/server.ts",
-    "dev": "npm run build -- npm run start",
+    "dev": "npm run build && npm run start",
     "sequelize": "sequelize-cli",
     "db:migrate": "sequelize db:migrate",
     "db:init": "npx sequelize-cli init",
@@ -32,6 +32,8 @@
     "pg": "~8.13.1",
     "sequelize": "^6.37.7",
     "streamifier": "~0.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "~10.9.2"
   },
   "devDependencies": {
@@ -41,6 +43,8 @@
     "@types/jsonwebtoken": "~9.0.7",
     "@types/multer": "~1.4.12",
     "@types/streamifier": "~0.1.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "joi-to-typescript": "~4.14.0",
     "nodemon": "~3.1.7",
     "sequelize-cli": "~6.6.2",
